# fiscal-policy-calculator

./: .dockerignore  .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_DETAILS.md  QUICK_REFERENCE.md  README.md  SECURITY.md  UI_UPDATES_INDEX.md  __init__.py  api.py  app.py  baseline.py  classroom_app.py  economics.py  mypy.gate.txt  policies.py  pyproject.toml  reporting.py  requirements-lock.txt  requirements.txt  scoring.py  tmpclaude-d3fc-cwd  uncertainty.py
.github/workflows/: fred-seed-refresh.yml  public-app-health.yml  tests.yml  update-bills.yml  validation-dashboard.yml
.streamlit/: config.toml
bill_tracker/: __init__.py  auto_scorer.py  cbo_fetcher.py  cbo_manual_scores.json  database.py  freshness.py  ingestor.py  manual_mappings.json  provision_mapper.py
classroom/: __init__.py  engine.py  feedback.py  pdf_export.py
classroom/assignments/: deficit_financing.yaml  distributional_incidence.yaml  laffer_curve.yaml  olg_generational.yaml  progressive_vs_flat.yaml  tcja_analysis.yaml  trade_tariff.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  METHODOLOGY.md  VALIDATION.md  VALIDATION_NOTES.md
docs/api/: fiscal_model.html  index.html  search.js
fiscal_model/: __init__.py  amt.py  api_security.py  api_serialization.py  app_data.py  baseline.py  climate.py  constants.py  corporate.py  credits.py  credits_core.py  credits_factory.py  distribution.py  distribution_core.py  distribution_effects.py  distribution_engine.py  distribution_grouping.py  distribution_reporting.py  economics.py  enforcement.py  estate.py  exceptions.py  feasibility.py  health.py  international.py  payroll.py  pharma.py  policies.py  policies_core.py  policies_factory.py  preset_handler.py  ptc.py  readiness.py  reporting.py  scoring.py  scoring_engine.py  scoring_result.py  tax_expenditures.py  tax_expenditures_core.py  tax_expenditures_factory.py  (+4 more)
fiscal_model/assistant/: __init__.py  admin.py  assistant.py  citations.py  cost.py  knowledge_search.py  rate_limit.py  share.py  sources.py  system_prompt.py  tools.py
fiscal_model/data/: __init__.py  capital_gains.py  cps_asec.py  fred_data.py  freshness.py  irs_soi.py  validation.py
fiscal_model/data_files/: bill_tracker_demo.json  bills.db  bills_populated.db  fred_seed.json
fiscal_model/long_run/: __init__.py  solow_growth.py
fiscal_model/microsim/: __init__.py  cps_auto_populator.py  data_builder.py  (+8 more)
notebooks/: example_usage.ipynb
planning/: APP_REVIEW.md  FEASIBILITY_CHECKLISTS.md  HORIZON_FEATURES.md  LAUNCH_READINESS.md  MANUSCRIPT_95_PLUS.md  NEXT_SESSION.md  NEXT_STEPS.md  ROADMAP.md  migration_plan.docx
scripts/: batch_score.py  check_bill_tracker_consistency.py  check_public_app.py  check_readiness.py  check_streamlit_boot.py  cold_holdout.py  generate_docs.py  generate_validation_appendix.py  import_cbo_fallback_scores.py  refresh_fred_seed.py  refresh_knowledge.py  run_feasibility_audit.py  run_validation_dashboard.py  smoke_ask_assistant.py  update_bills.py  update_data.py  validate_cbo_fallback_scores.py
tests/: __init__.py  conftest.py  test_a11y.py  test_api.py  test_api_bounds.py  test_api_scorecard.py  test_api_security.py  test_api_serialization.py  test_app_entrypoints.py  test_arp_bundle.py  test_ask_api.py  test_assistant_admin.py  test_assistant_health.py  test_assistant_rate_limit.py  test_assistant_share.py  test_augmentation_preview.py  test_baseline.py  test_behavioral_offset_signs.py  test_benchmark_runners.py  test_bill_tracker.py  test_bill_tracker_calibration.py  test_bill_tracker_ui.py  test_capital_gains_validation.py  test_cbo_distributions.py  test_cbo_regression.py  test_cbo_validation_parametrized.py  test_check_readiness_script.py  test_ci_workflow.py  test_classroom.py  test_climate.py  test_cold_holdout.py  test_combine_distributional_results.py  test_compare_integration.py  test_confidence_band.py  test_cps_asec_loader.py  test_cps_auto_populator.py  test_credits.py  test_data_degradation.py  test_data_layer.py  test_data_validation_extra.py  (+71 more)
(+121 files in other folders)
